# UltraChat

./: .gitignore  requirements.txt  run.py
backend/: __init__.py  main.py
backend/config/: __init__.py  constants.py  settings.py
backend/core/: __init__.py  hf_model_manager.py  ollama_client.py  streaming.py  voice_manager.py
backend/core/pocket_tts/: pyproject.toml
backend/core/pocket_tts/pocket_tts/: __init__.py
backend/core/pocket_tts/pocket_tts/models/: tts_model.py
backend/core/pocket_tts/pocket_tts/utils/: utils.py
backend/models/: __init__.py  chat.py  database.py  memory.py  model_registry.py  profile.py  schemas.py  voice.py
backend/routes/: __init__.py  chat.py  memory.py  models.py  profiles.py  settings.py  voice.py  web_search.py
backend/services/: __init__.py  chat_service.py  memory_service.py  message_tree.py  model_service.py  profile_service.py  tool_service.py  web_search_service.py
backend/utils/: __init__.py  helpers.py  storage.py
data/: config.json  ultrachat.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/css/: animations.css  components.css  main.css
frontend/js/: api.js  app.js  chat.js  memory.js  models.js  profiles.js  settings.js  sidebar.js  state.js
frontend/js/utils/: dom.js  markdown.js  modal.js  storage.js  toast.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatView.jsx  MemoryView.jsx  ModelsView.jsx  ProfilesView.jsx  SettingsView.jsx  Sidebar.jsx  VoiceMode.jsx  (+1 more)
tests/: test_pocket_tts.py  test_tools.py  test_voice_integration.py  test_vosk.py
(+4 files in other folders)
