[project]
name = "pocket-tts"
requires-python = ">= 3.10"
description = "Kyutai's pocket-sized text-to-speech (modified for UltraChat)"
version = "1.0.3"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pydantic>=2",
    "sentencepiece>=0.1.99",
    "beartype>=0.18.0",
    "safetensors>=0.3.0",
    "typer>=0.9.0",
    "typing_extensions>=4.0.0",
    "scipy>=1.5.0",
    "einops>=0.4.0",
    "huggingface_hub>=0.10",
    "requests>=2.20.0",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pocket_tts"]